--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "angular": "~1.4",
-    "angular-route": "~1.4"
+    "angular-route": "~1.4",
+    "font-awesome": "^4.6.1"
   }
 }
