--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "~1.4",
     "angular-route": "~1.4",
-    "font-awesome": "^4.6.1"
+    "font-awesome": "^4.6.1",
+    "angularUtils-disqus": "angular-utils-disqus#^1.0.0"
   }
 }
